; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/libncftp/extr_ftp.c_SetInlineOutOfBandData.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/libncftp/extr_ftp.c_SetInlineOutOfBandData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_OOBINLINE = common dso_local global i32 0, align 4
@kDoPerror = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Could not set out of band inline mode.\0A\00", align 1
@kErrSetOutOfBandInline = common dso_local global i32 0, align 4
@kNoErr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetInlineOutOfBandData(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 1, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @SOL_SOCKET, align 4
  %9 = load i32, i32* @SO_OOBINLINE, align 4
  %10 = bitcast i32* %6 to i8*
  %11 = call i64 @setsockopt(i32 %7, i32 %8, i32 %9, i8* %10, i32 4)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %2
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %15 = load i32, i32* @kDoPerror, align 4
  %16 = call i32 @Error(%struct.TYPE_4__* %14, i32 %15, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* @kErrSetOutOfBandInline, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @kErrSetOutOfBandInline, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @kNoErr, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %13
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i64 @setsockopt(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @Error(%struct.TYPE_4__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
